# simpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bash
.github/workflows/: googletest.yaml
simpp/: .dir-locals.el  CMakeCache.txt  CMakeLists.txt  Makefile  TAGS  cmake_install.cmake  condition.cpp  operator.hpp  queue_event.cpp  queue_event.hpp  test.cpp  timeout.cpp
simpp/include/: allof.hpp  anyof.hpp  condition.hpp  core.hpp  event.hpp
simpp/src/: CMakeLists.txt  allof.cpp  anyof.cpp  core.cpp  core.cpp~  timeout.cpp
simpp/test/: CMakeLists.txt  condition_test.cpp  interact_test.cpp  test_process.cpp  timeout_test.cpp
trial/: .dir-locals.el  Makefile  callback.hpp  chain.cpp  core.cpp  core.hpp  event.cpp  event.hpp  main  main.cpp  process.cpp  process.hpp  queue_event.cpp  queue_event.hpp  test  test.cpp  test_process.cpp  timeout.hpp
xtras/: test.cpp
